css/style.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'DM Sans', sans-serif;
}

.container{
    max-width: 1075px;
    margin: 0 auto;
}

body{
    min-height: 100vh;
    display: flex;
    flex-direction: column;
}

.button{
    border-radius: 200px;
    background-color: white;
    border: white;
    font-weight: bold;
    display: inline-block;
}

a{
    text-decoration: none;
}

.grow-1{
    flex-grow: 1;
}

.justify-between{
    justify-content: space-between;
}

/* header */

.page-header{
    background-color: #3161E0;
    padding: 20px 0px 15px;
    /* background-image: url(../img/jumbo.png); */
}

.row{
    display: flex;
    flex-wrap: wrap;
}

.page-header .button{
    padding: 0px 12px;
    font-weight: bold;
    line-height: 40px;
}

.page-header a{
    color: black;
}

.nav-menu{
    display: flex;
    align-items: center;
    justify-content: center;
}

.nav-menu a{
    /* display: block; */
    text-decoration: none;
    color: white;
    font-weight: bold;
    line-height: 32px;
    padding: 0px 15px;
}
.page-header .row *:nth-child(2){
    text-align: center;
}

.page-header .row *:last-child{
    text-align: end;
}

/*Main*/

/*Main - Section 1*/

.section-one{
    background-image: url(../img/jumbo.png);
    background-size: cover;
    background-position: center;
    padding: 50px 0 140px;
}

.section-one [class^="col"]{
    min-height: 300px;
}

.section-one .row {
    justify-content: center;
    color: white;
    text-align: center;
}

.section-one .col-9{
    padding-top: 40px;
}

.main-title{
    font-size: 55px;
    font-weight: bolder;
    padding-bottom: 30px;
}

.section-one p{
    font-size: large;
    padding: 0 50px 20px;
    line-height: 30px;
}

.section-one .button{
    font-size: large;
    line-height: 50px;
    padding: 0px 23px;
}

.download-mac{
    padding-right: 20px;
}

.mac__link{
    color: black;
}

.browser .button{
    background-color: #23272A;
}

.browser__link{
    color: white;
}

.call-to-action{
    padding-top: 20px;
}

    /*Main - Section 2*/

.flex-col{
    display: flex;
}

.section-middle [class^="col-"]{
    min-height: 380px;
}

.section-middle{
    padding: 150px 0;
}

.section-middle img{
    width: 600px;
    vertical-align: top;
}

.channels .row{
    justify-content: space-between;
}

.par-title{
    font-size: 45px;
    font-weight: 900;
    padding-bottom: 20px;
}

.section-middle p,
.section-bottom p{
    font-size: large;
    font-weight: 600;
    line-height: 25px;
}

    /* Main - Section 3*/

.greybg{
    background-color: #F6F6F6;
}
.voice {
    padding: 150px 0;
}
.voice .col-8{
    justify-content: flex-end;
}

.main-content .voice .col-4{
    order: -1;
}

    /* Main - Section 5*/

.section-bottom{
    padding: 150px 0;
}

.contact {
    text-align: center;
}

.contact img{
    width: 1000px;
}

.cta{
    background-image: url(../img/stars.svg);
    background-repeat: no-repeat;
    background-size: 500px;
    background-position: center;
}

.cta h3{
    padding-top: 50px;
    font-size: 25px;
    font-weight: 800;
}

.cta-download{
    padding-top: 40px;
}

.cta-download .button{
    font-size: larger;
    line-height: 50px;
    font-weight: 600;
    padding: 0px 23px;
}

.purple-bg{
    background-color: #8EA1E1;
    color: white;
}

/* Footer*/

footer{
    background-color: #23272A;
}

.section-footer-top {
    padding-top: 50px;
    padding-bottom: 10px;
}

.footer-title{
    color: #7289DA;
    font-size: 30px;
    padding-right: 80px;
    padding-bottom: 15px;
}

.section-footer-top img{
    width: 20px;
}

.language{
    display: inline-block;
    color: white;
    padding-bottom: 10px;
}

.language-symbol{
    display: inline-block;
    vertical-align: top;
}

.logos img{
    width: 38px;
    padding-right: 20px;
}

.section-footer-top .container{
    border-bottom: 1px solid #7289DA;
    padding-bottom: 20px;
}

ul{
    list-style-type: none;
}

ul a{
    text-decoration: none;
}

.section-footer-top li{
    font-weight: 700;
    padding-bottom: 10px;
}

.section-footer-top li a{
    color: white;
}

.section-footer-top .list-title{
    color: #7289DA;
}


.page-footer{
    padding: 20px 0 0;
}

.page-footer .row{
    padding: 20px 0;
    justify-content: space-between;
}


.page-footer .button{
    line-height: 40px;
    padding: 0px 12px;
    font-weight: bold;
}

.page-footer [class^="col"]{
    text-align: center;
    padding: 2px;
}

/* Columns*/

.col-1{
    flex-basis: calc(100% / 12);
}

.col-2{
    flex-basis: calc(100% / 6);
}

.col-3{
    flex-basis: calc(100% / 4);
}

.col-4{
    flex-basis: calc(100% / 3);
}

.col-5{
    flex-basis: calc((100% / 12) * 5);
}

.col-6{
    flex-basis: calc(100% / 2);
}

.col-7{
    flex-basis: calc((100% / 12) * 7);
}

.col-8{
    flex-basis: calc((100% / 3) * 2);
}

.col-9{
    flex-basis: calc((100% / 4) * 3);
}

.col-12{
    flex-basis: 100%;
}

/* DEBUG */

.debug [class^="col"]{
    border: 2px dashed black;
}

.debug .page-header [class^='col']{
    padding: 8px;
}

.debug .page-header [class^='col']{
    background-color: #DAA520;

}

.debug .main-content section {
    padding: 40px 0;
}


.debug [class^="col"]{
    min-height: 30px;
}

.debug .section-one [class^="col"]{
    background-color: #EE82EE;
}

.debug .section-one {
    background-color: #00008B;
}
.debug .section-middle [class^="col-"]{
    background-color: #FFC0CB;
}

.debug .section-middle .col-7{
    background-color: #1E90FF;
}

.debug .section-bottom [class^="col-"]{
    min-height: 690px;
    background-color: #228B22;
}

.debug .section-footer-top .row {
    border: 2px dashed black;
}

.debug .section-footer-top [class^="col-"]{
    background-color: #F08080;
}

.debug .section-footer-top .col-2{
    background-color: #20B2AA;
    border: 2px dashed white;
}

.debug .page-footer .row{
    background-color: #7FFFD4;
}

.debug .page-footer [class^="col"]{
    background-color: #FFB6C1;
}

